<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">Load channel</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="Glide">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity">LoadApp - Current repository by Udacity</string>
    <string name="glideGithubURL">https://github.com/bumptech/glide</string>
    <string name="loadAppGithubURL">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofitGithubURL">https://github.com/square/retrofit</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>
</resources>
