<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="250dp"
        android:layout_marginVertical="600dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="604dp"
        android:text="@string/file_name"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/filename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="500dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="464dp"
        android:paddingStart="10sp"
        android:text="@string/Glide"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="250dp"
        android:layout_marginVertical="400dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="400dp"
        android:text="@string/status"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="190dp"
        android:layout_height="103dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="140dp"
        app:layoutDescription="@xml/content_detail_scene"
        app:layout_constraintBottom_toTopOf="@+id/okBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="400dp"
            android:text="Succuss"
            android:textSize="30dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="31dp" />
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="202dp"
        android:layout_height="53dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Ok"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>